--- a/src/app.css
+++ b/src/app.css
@@ -5,8 +5,8 @@
 }
 :root {
 	--bg-200: #3a2e3d;
-	--bg-600: #523758;
-	--bg-400: #3b333d;
+	--bg-600: #46395e;
+	--bg-400: #46395e;
 	--bg-500: #342b36;
 }
 body,
@@ -28,7 +28,7 @@ main {
 
 nav {
 	display: flex;
-	height: 100%;
+	height: 100vh;
 
 	width: 20%;
 	background-color: var(--bg-400);
