--- a/src/app.css
+++ b/src/app.css
@@ -1,60 +1,90 @@
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;900&display=swap");
-
-* {
-	font-family: "Red Hat Display", sans-serif;
-}
-:root {
-	--bg-200: #3a2e3d;
-	--bg-600: #46395e;
-	--bg-400: #46395e;
-	--bg-500: #342b36;
-}
-body,
-html {
-	background-color: var(--bg-200);
-	overflow: hidden;
-	margin: 0px;
-}
-main {
-	display: flex;
-	flex-direction: row;
-}
-#slot-div {
-	width: 100%;
-	height: 100vh;
-	overflow-x: hidden;
-	overflow-y: scroll;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@500&display=swap");
 nav {
-	display: flex;
-	height: 100vh;
-
-	width: 20%;
-	background-color: var(--bg-400);
-	flex-direction: column;
-	gap: 0px;
-}
-nav > a {
+	width: 96%;
+	height: 8vh;
 	display: grid;
 	place-items: center;
+	position: sticky;
+	top: 0;
 	grid-template-rows: 1fr;
-	grid-template-columns: 1fr 5fr;
-	height: 3rem;
-	color: white;
-	font-weight: 700;
-	font-size: 1.2rem;
-	text-decoration: none;
-	background-color: var(--bg-600);
-	transition: background-color 0.2s ease-in-out 0s;
+	grid-template-columns: 4fr 1fr 1fr 1fr 1fr 13fr 2fr;
+	background-color: #2d2d2d;
+	box-shadow: 0px 2vh 0px #1a1a1a;
+	gap: 0.1rem;
+	padding: 0em 2vw;
+	justify-content: center;
+	align-content: center;
+	z-index: 999;
 }
 
-nav > a::before {
-	content: url("/info.svg");
-	width: 1.8rem;
-	height: 1.5rem;
+body,
+html {
+	margin: 0px;
 }
 
-nav > a:hover {
-	background-color: var(--bg-500);
+* {
+	font-family: "Lexend", sans-serif;
+}
+
+.nav-icon {
+	width: 3rem;
+	background-color: #1a1a1a;
+}
+
+.infobutton {
+	border: none;
+	border-radius: 46px;
+
+	padding-right: 2em;
+	background-color: #424242;
+	display: flex;
+	cursor: pointer;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	font-size: 1.5rem;
+}
+
+.infobutton > #infoarrow {
+	background-color: #363636;
+	width: 2rem;
+	height: 2rem;
+	border-radius: 1rem;
+	position: relative;
+
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	margin-left: 0px;
+	margin-right: 0.5rem;
+}
+
+#ip {
+	font-size: 1.5rem;
+	background-color: #1a1a1a;
+	padding: 0.2rem 1rem;
+	border-radius: 7px;
+}
+html,
+body,
+main {
+	height: 100%;
+	overflow-x: hidden;
+}
+#slot-div {
+	height: 92%;
+}
+
+@media only screen and (max-width: 768px) {
+	.nav-icon {
+		display: none;
+	}
+
+	#ip {
+		font-size: 4vw;
+	}
+	.infobutton {
+		font-size: 4vw;
+	}
 }
